crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3037_pin_zypper_versions_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 676
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3037",
    "help": null,
    "labels": [],
    "message": "pin versions in zypper install",
    "path": "",
    "primary_span": {
      "end_byte": 50,
      "end_column": 27,
      "end_line": 2,
      "start_byte": 24,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "DL3037",
    "help": null,
    "labels": [],
    "message": "pin versions in zypper install",
    "path": "",
    "primary_span": {
      "end_byte": 121,
      "end_column": 38,
      "end_line": 4,
      "start_byte": 84,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "DL3037",
    "help": null,
    "labels": [],
    "message": "pin versions in zypper install",
    "path": "",
    "primary_span": {
      "end_byte": 202,
      "end_column": 37,
      "end_line": 6,
      "start_byte": 166,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  },
  {
    "code": "DL3037",
    "help": null,
    "labels": [],
    "message": "pin versions in zypper install",
    "path": "",
    "primary_span": {
      "end_byte": 295,
      "end_column": 38,
      "end_line": 9,
      "start_byte": 258,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "warning"
  }
]
