crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3038_dnf_install_assume_yes_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 692
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3038",
    "help": null,
    "labels": [],
    "message": "use `dnf install -y` to avoid interactive prompts",
    "path": "",
    "primary_span": {
      "end_byte": 35,
      "end_column": 21,
      "end_line": 2,
      "start_byte": 15,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "DL3038",
    "help": null,
    "labels": [],
    "message": "use `dnf install -y` to avoid interactive prompts",
    "path": "",
    "primary_span": {
      "end_byte": 194,
      "end_column": 32,
      "end_line": 8,
      "start_byte": 163,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "warning"
  }
]
