crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3042_pip_no_cache_dir_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 740
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 51,
      "end_column": 22,
      "end_line": 2,
      "start_byte": 30,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "DL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 161,
      "end_column": 32,
      "end_line": 5,
      "start_byte": 130,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "DL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 368,
      "end_column": 43,
      "end_line": 10,
      "start_byte": 326,
      "start_column": 1,
      "start_line": 10
    },
    "severity": "warning"
  },
  {
    "code": "DL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 415,
      "end_column": 24,
      "end_line": 12,
      "start_byte": 392,
      "start_column": 1,
      "start_line": 12
    },
    "severity": "warning"
  },
  {
    "code": "DL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 460,
      "end_column": 21,
      "end_line": 15,
      "start_byte": 440,
      "start_column": 1,
      "start_line": 15
    },
    "severity": "warning"
  },
  {
    "code": "DL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 515,
      "end_column": 23,
      "end_line": 18,
      "start_byte": 493,
      "start_column": 1,
      "start_line": 18
    },
    "severity": "warning"
  },
  {
    "code": "DL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 563,
      "end_column": 25,
      "end_line": 20,
      "start_byte": 539,
      "start_column": 1,
      "start_line": 20
    },
    "severity": "warning"
  },
  {
    "code": "DL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 623,
      "end_column": 60,
      "end_line": 21,
      "start_byte": 564,
      "start_column": 1,
      "start_line": 21
    },
    "severity": "warning"
  },
  {
    "code": "DL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 743,
      "end_column": 21,
      "end_line": 28,
      "start_byte": 723,
      "start_column": 1,
      "start_line": 28
    },
    "severity": "warning"
  },
  {
    "code": "DL3042",
    "help": null,
    "labels": [],
    "message": "avoid pip cache directories by using `pip install --no-cache-dir`",
    "path": "",
    "primary_span": {
      "end_byte": 802,
      "end_column": 59,
      "end_line": 29,
      "start_byte": 744,
      "start_column": 1,
      "start_line": 29
    },
    "severity": "warning"
  }
]
