crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3043_no_onbuild_trigger_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 756
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3043",
    "help": null,
    "labels": [],
    "message": "`ONBUILD`, `FROM`, or `MAINTAINER` triggered from within `ONBUILD` instruction",
    "path": "",
    "primary_span": {
      "end_byte": 88,
      "end_column": 32,
      "end_line": 4,
      "start_byte": 57,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "error"
  },
  {
    "code": "DL3043",
    "help": null,
    "labels": [],
    "message": "`ONBUILD`, `FROM`, or `MAINTAINER` triggered from within `ONBUILD` instruction",
    "path": "",
    "primary_span": {
      "end_byte": 109,
      "end_column": 21,
      "end_line": 5,
      "start_byte": 89,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "error"
  },
  {
    "code": "DL3043",
    "help": null,
    "labels": [],
    "message": "`ONBUILD`, `FROM`, or `MAINTAINER` triggered from within `ONBUILD` instruction",
    "path": "",
    "primary_span": {
      "end_byte": 144,
      "end_column": 35,
      "end_line": 6,
      "start_byte": 110,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "error"
  },
  {
    "code": "DL3043",
    "help": null,
    "labels": [],
    "message": "`ONBUILD`, `FROM`, or `MAINTAINER` triggered from within `ONBUILD` instruction",
    "path": "",
    "primary_span": {
      "end_byte": 165,
      "end_column": 21,
      "end_line": 7,
      "start_byte": 145,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "error"
  }
]
