crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3044_no_env_self_reference_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3044",
    "help": null,
    "labels": [],
    "message": "do not refer to an environment variable within the same `ENV` statement where it is defined",
    "path": "",
    "primary_span": {
      "end_byte": 89,
      "end_column": 43,
      "end_line": 3,
      "start_byte": 47,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "DL3044",
    "help": null,
    "labels": [],
    "message": "do not refer to an environment variable within the same `ENV` statement where it is defined",
    "path": "",
    "primary_span": {
      "end_byte": 150,
      "end_column": 61,
      "end_line": 4,
      "start_byte": 90,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "error"
  },
  {
    "code": "DL3044",
    "help": null,
    "labels": [],
    "message": "do not refer to an environment variable within the same `ENV` statement where it is defined",
    "path": "",
    "primary_span": {
      "end_byte": 352,
      "end_column": 30,
      "end_line": 11,
      "start_byte": 323,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "error"
  }
]
