crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3045_copy_relative_without_workdir_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3045",
    "help": null,
    "labels": [],
    "message": "`COPY` to a relative destination without `WORKDIR` set",
    "path": "",
    "primary_span": {
      "end_byte": 41,
      "end_column": 17,
      "end_line": 2,
      "start_byte": 25,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "DL3045",
    "help": null,
    "labels": [],
    "message": "`COPY` to a relative destination without `WORKDIR` set",
    "path": "",
    "primary_span": {
      "end_byte": 372,
      "end_column": 24,
      "end_line": 22,
      "start_byte": 349,
      "start_column": 1,
      "start_line": 22
    },
    "severity": "warning"
  },
  {
    "code": "DL3045",
    "help": null,
    "labels": [],
    "message": "`COPY` to a relative destination without `WORKDIR` set",
    "path": "",
    "primary_span": {
      "end_byte": 481,
      "end_column": 22,
      "end_line": 30,
      "start_byte": 460,
      "start_column": 1,
      "start_line": 30
    },
    "severity": "warning"
  },
  {
    "code": "DL3045",
    "help": null,
    "labels": [],
    "message": "`COPY` to a relative destination without `WORKDIR` set",
    "path": "",
    "primary_span": {
      "end_byte": 797,
      "end_column": 14,
      "end_line": 48,
      "start_byte": 784,
      "start_column": 1,
      "start_line": 48
    },
    "severity": "warning"
  },
  {
    "code": "DL3045",
    "help": null,
    "labels": [],
    "message": "`COPY` to a relative destination without `WORKDIR` set",
    "path": "",
    "primary_span": {
      "end_byte": 940,
      "end_column": 14,
      "end_line": 56,
      "start_byte": 927,
      "start_column": 1,
      "start_line": 56
    },
    "severity": "warning"
  }
]
