crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3046_useradd_no_log_init_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 804
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3046",
    "help": null,
    "labels": [],
    "message": "`useradd` without flag `-l` and high UID will result in excessively large image",
    "path": "",
    "primary_span": {
      "end_byte": 46,
      "end_column": 26,
      "end_line": 2,
      "start_byte": 21,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "DL3046",
    "help": null,
    "labels": [],
    "message": "`useradd` without flag `-l` and high UID will result in excessively large image",
    "path": "",
    "primary_span": {
      "end_byte": 75,
      "end_column": 29,
      "end_line": 3,
      "start_byte": 47,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "DL3046",
    "help": null,
    "labels": [],
    "message": "`useradd` without flag `-l` and high UID will result in excessively large image",
    "path": "",
    "primary_span": {
      "end_byte": 104,
      "end_column": 29,
      "end_line": 4,
      "start_byte": 76,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "DL3046",
    "help": null,
    "labels": [],
    "message": "`useradd` without flag `-l` and high UID will result in excessively large image",
    "path": "",
    "primary_span": {
      "end_byte": 129,
      "end_column": 25,
      "end_line": 5,
      "start_byte": 105,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "DL3046",
    "help": null,
    "labels": [],
    "message": "`useradd` without flag `-l` and high UID will result in excessively large image",
    "path": "",
    "primary_span": {
      "end_byte": 350,
      "end_column": 36,
      "end_line": 12,
      "start_byte": 315,
      "start_column": 1,
      "start_line": 12
    },
    "severity": "warning"
  }
]
